fix image too big bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,3 +60,6 @@
 
 /*baidu share wixin share*/
 #bdshare_weixin_qrcode_dialog table{width: 205px;}
+.col-md-8 img{
+  max-width: 580px;
+}
